# basic_patter_classifier

./: CMakeLists.txt  DiscriminantCases.h  MatricOP.h  P2_part_a.cpp  P2_part_b.cpp  RandomNoGenerator.h  fileOP.h  main.cpp  test.cpp  test.h
